[tool.poetry]
name = "global-entry-scraper"
version = "0.1.0"
description = ""
authors = ["Jeff Skelton <jeff@jeffskelton.net>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
us = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
